--- a/index.html
+++ b/index.html
@@ -52,9 +52,11 @@
         <div class="header__buttons">
             <button class="btn btn--green btn--arrow">
                 Search a job
+                <span></span>
             </button>
             <button class="btn btn--green btn--arrow">
                 Post a Resume
+                <span></span>
             </button>
         </div>
 
